[package]

name = "leveldb"
version = "0.8.6"
authors = [ "Florian Gilcher <florian.gilcher@asquera.de>" ]

description = "An interface for leveldb"

license = "MIT"
readme = "README.md"

documentation = "http://skade.github.io/leveldb/"
homepage = "https://github.com/skade/leveldb"
repository = "https://github.com/skade/leveldb"

autotests = false

[features]
default = ["leveldb-sys/snappy"]

[lib]

name = "leveldb"

[dependencies]

db-key = "0.0.5"
libc = "0.2.4"

[dependencies.leveldb-sys]
git = "https://github.com/SamWilsn/leveldb-sys.git"
rev = "51e2660871c7fa15ee07fb463cc7d079b64843cd"

[dev-dependencies]
tempdir = "0.3.4"

[[test]]
name = "tests"
